add demo assets

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Angular-listview : Simple listview for angular.js" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/listview.css">
 
     <title>Angular-listview</title>
   </head>
@@ -63,6 +64,8 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
+    <script src="javascripts/listview.js"></script>
+    <script src="javascripts/app.js"></script>
 
     
 
