update demo assets

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p>simple listview for angular.js</p>
 
-<p>it is useful when you have one data source, but needs to show several listviews which may has different styles, columns</p>
+<p>it is useful when you have one data source, but needs to show several listviews which may has different styles, columns in your project</p>
 
 <h2>
 <a name="sample" class="anchor" href="#sample"><span class="octicon octicon-link"></span></a>Sample</h2>
